Added hand on hover at logout button

--- a/src/main/resources/com/bsmi/attendancesystem/fxml/dashboard-view.fxml
+++ b/src/main/resources/com/bsmi/attendancesystem/fxml/dashboard-view.fxml
@@ -32,6 +32,9 @@
                                        <graphic>
                                           <FontIcon iconLiteral="fas-sign-out-alt" />
                                        </graphic>
+                                       <cursor>
+                                          <Cursor fx:constant="HAND" />
+                                       </cursor>
                                     </MFXButton>
                                  </children>
                               </AnchorPane>
